# face_recog_on_xavier

./: README.md
dface_detection/: CMakeLists.txt  display.cpp
dface_recog/: CMakeLists.txt  display.cpp
dlib_recog/: v1.cpp  v10_webcam_face_recog.cpp  v2.cpp  v3.cpp  v4.cpp  v5_basic_recog.cpp  v6.cpp  v7.cpp  v8.cpp
dlib_recog/v9_refactored/: CMakeLists.txt  webcam_face_recog.cpp
dlib_recog/v9_refactored/recogHrt/: CMakeLists.txt  recog.cpp  recogHrt.h
lib_add_test/testInclude/: CMakeLists.txt  gccTest  gccTest.cpp
lib_add_test/testInclude/MathFunctions/: mysqrt.cpp  mysqrt.h
lib_add_test/testStaticlib/: CMakeLists.txt
opencv_complie_sal/: CMakeLists.txt
opencv_saliency_test/: CMakeLists.txt  README.txt  sal_speed.cpp
